--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -19,10 +18,18 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    "baseUrl": "./",
+    "paths": {
+      "@spartan-ng/ui-button-helm": [
+        "components/lib/ui-button-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-accordion-helm": [
+        "components/lib/ui-accordion-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-icon-helm": ["components/lib/ui-icon-helm/src/index.ts"],
+      "@spartan-ng/ui-alert-helm": ["components/lib/ui-alert-helm/src/index.ts"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
