--- a/package.json
+++ b/package.json
@@ -1,38 +1,64 @@
 {
-  "name": "test-cli",
+  "name": "unicon",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run test-cli:storybook",
+    "build-storybook": "ng run test-cli:build-storybook"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
-    "@angular/common": "^17.2.0",
+    "@angular/cdk": "17.3.0",
+    "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.2.0",
-    "@angular/core": "^17.2.0",
+    "@angular/core": "^17.3.0",
     "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@ng-icons/core": "^25.1.0",
+    "@ng-icons/lucide": "^26.3.0",
+    "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.344",
+    "@spartan-ng/ui-core": "^0.0.1-alpha.344",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "unicon-ng": "^0.0.2",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.2",
     "@angular/cli": "^17.2.2",
     "@angular/compiler-cli": "^17.2.0",
+    "@chromatic-com/storybook": "^1.3.1",
+    "@compodoc/compodoc": "^1.1.23",
+    "@spartan-ng/cli": "^0.0.1-alpha.346",
+    "@storybook/addon-docs": "^8.0.6",
+    "@storybook/addon-essentials": "^8.0.6",
+    "@storybook/addon-interactions": "^8.0.6",
+    "@storybook/addon-links": "^8.0.6",
+    "@storybook/angular": "^8.0.6",
+    "@storybook/blocks": "^8.0.6",
+    "@storybook/test": "^8.0.6",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.3.0",
+    "postcss": "^8.4.38",
+    "storybook": "^8.0.6",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.3.2"
   }
 }
